добавляет секцию в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,9 @@
         </ul>
     </header>
 <main>
+    
     <h1>Портфолио</h1>
+    <section>
     <ul class="list">
         <li>
             <button type="button" class="port-button">Все</button>
@@ -103,6 +105,7 @@
             </a>
         </li>
     </ul>
+    </section>
 </main>
 
     <footer>
